app/stylesheets/partials/_order.sass
#checkout
	:border 1px solid #999
	+rounded( 10px )
	:margin 0 auto
	:padding 20px
	h3
		margin-top: 10px
		margin-bottom: 10px
	
input#order_zip
	:width 50px
	
input#order_card_cvv
	:width 50px
	
#paypal_x_checkout
	:display none
	
#shipping_form
	:display none
#shipping_new
	display: none
	
.order_label
	margin-left: 20px
	font-weight: bold
	width: 200px
	float: left
.order_field
	width: 300px
	float: left
	clear: right
	margin-bottom: 5px
	img
		vertical-align: middle
.coupon
	width: 250px

#pay_method
	margin-bottom: 1em
	

